--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,20 @@
 {
-    "name": "arobinski/otodom-openapi-sdk",
+    "name": "naspersclassifieds/realestate-openapi-sdk",
     "type": "project",
     "require": {
         "guzzlehttp/guzzle": "^6.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "naspersclassifieds\\realestate\\openapi\\": "src/openapi/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "naspersclassifieds\\realestate\\openapi\\tests\\": "tests/"
+        }
     }
 }
